--- a/public/css/mailp.css
+++ b/public/css/mailp.css
@@ -1,3 +1,6 @@
+*{
+	font-family: 'arial', sans-serif;
+}
 body{
 	display: flex;
 	min-height: 100vh;
@@ -10,13 +13,13 @@ body{
 }
 
 main{
-    width: 90%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 5%;
-    margin-right: 5%;
-    height: auto;
-    background-color: #FFFFFF;
-    border-radius: 20px;
-    box-shadow: 5px 9px rgb(0 0 0 / 34%);
+	width: 90%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 5%;
+	margin-right: 5%;
+	height: auto;
+	background-color: #FFFFFF;
+	border-radius: 20px;
+	box-shadow: 5px 9px rgb(0 0 0 / 34%);
 }
